<resources>
    <string name="app_name">COPUS</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_help">Help</string>
    <string name="action_fileSelect">Files</string>

    <string name="COPUS_Name">COPUS</string>
    <string name="Lecturer_Title">Instructor:</string>
    <string name="Students_Title">Students:</string>
    <string name="Engagement_Title">Engagement:</string>
    <string name="COPUS_URL_MESSAGE">Open http://www.cwsei.ubc.ca/resources/COPUS.htm</string>
    <string name="COPUS_URL">http://www.cwsei.ubc.ca/resources/COPUS.htm</string>

    <string name="RtW_Checkbox">RtW</string>
    <string name="Listening_Checkbox">Listening</string>
    <string name="Lecturing_Checkbox">Lecturing</string>
    <string name="Independent_Thinking_Checkbox">Ind. Thinking</string>
    <string name="Follow_Up_Checkbox">Follow Up</string>
    <string name="CG_Checkbox">CG</string>
    <string name="PQ_Checkbox">PQ</string>
    <string name="Group_Work_Checkbox">Group Work</string>
    <string name="Other_Group_Checkbox">Other Group</string>
    <string name="CQ_Checkbox">CQ</string>
    <string name="Student_AnQ_Checkbox">AnQ</string>
    <string name="Teacher_AnQ_Checkbox">AnQ</string>
    <string name="SQ_Checkbox">SQ</string>
    <string name="Moving_Checkbox">Moving</string>
    <string name="WC_Checkbox">WC</string>
    <string name="OneOnOne_Checkbox">1o1</string>
    <string name="Prd_Checkbox">Prd</string>
    <string name="Demo_Checkbox">D/V</string>
    <string name="SP_Checkbox">SP</string>
    <string name="Admin_Checkbox">Admin</string>
    <string name="Test_Quiz_Checkbox">Test/Quiz</string>
    <string name="Teacher_Waiting_Checkbox">Waiting</string>
    <string name="Student_Waiting_Checkbox">Waiting</string>
    <string name="Teacher_Other_Checkbox">Other</string>
    <string name="Student_Other_Checkbox">Other</string>

    <string name="Timer_Start">Start</string>
    <string name="Timer_End">Stop</string>
    <string name="Time_Stamp_Label">Time: %s</string>
    <string name="Timer_Text_Label"></string>

    <string name="studentEngagement">Engagement</string>
    <string-array name="student_engagement_options">
        <item></item>
        <item>High</item>
        <item>Medium</item>
        <item>Low</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>

    <!-- Messages Preferences -->
    <string name="default_to_title">Default Email To Address</string>

    <string name="about_details">An implementation of the COPUS protocoal by Smith, Jones, Gilbert, and Wieman. More details can be found at <u>http://www.cwsei.ubc.ca/resources/COPUS.htm</u> \n\n\nWritten by Kelly Black, Department of Mathematics, University of Georgia.</string>
    <string name="about_back">Back</string>

    <!-- strings for the dialog to confirm whether or not to delete the current observation -->
    <string name="ask_delete_current_observation">This will delete the current observation. Do you want to continue?</string>
    <string name="delete_current_observation">Delete and Proceed</string>
    <string name="cancel_delete_observation">Cancel</string>

    <!-- Strings for the dialog to decide whether or not to print a flat file or a table to csv -->
    <string name="ask_flat_or_table_csv">Which format csv file do you prefer? A table will result in matrix layout of all options. A flat file will only print out what items were checked in a given time period with only a couple columns.</string>
    <string name="print_table_csv">Table (matrix)</string>
    <string name="print_flat_csv">Flat file</string>

    <!-- Strings for the dialog to present a notice when the timer is stopped. -->
    <string name="timer_stopped_notice">The results of this observation have not been saved. You need to click on the mail button to send the results so that they can be shared. You can email them to your self so that you can retrieve them on another computer.\n\nThe next time you run the timer these results will be deleted.</string>
    <string name="timer_continue_button">Continue</string>

    <!-- Strings for the error dialog when someone presses the email button at a bad time -->
    <string name="email_cannot_send_timer_on">The timer is active, and a current file cannot be sent. Please stop the timer before trying to send the current observations.</string>
    <string name="email_cannot_send_title">Cannot send a file</string>
    <string name="email_cannot_send_resume">Resume</string>

    <!-- Strings for the error dialog when someone presses the email button and there is no observation-->
    <string name="email_cannot_send_no_observation">There is no  observation to send. Please conduct an observation before trying to send.</string>


    <!-- Strings for the help screen 0-->
    <string name="help_title_bar">Help</string>
    <string name="help_page"><![CDATA[
        <p>
        This app is used to aid in implementing an observation based on the COPUS protocol.
        The options on the opening view allow you to choose the different options from the protocol.
        The basic idea is that you start the timer, record the observations, and stop the timer at the end.
        You then send the results via email so that you can view and share them.
        </p><br/>
        <p>
        Before starting the timer a second time you have to send the previous observations so that
        the observations can be saved. Otherwise, the previous observations will be lost.
        </p><br/>
        <p>How to operate:</p><br/>
        <ol>
            <li>Click the start button to begin the timer.</li>
            <li>While the timer is on touch the checkboxes coresponding to the activities you observe.</li>
            <li>Every two minutes the checkboxes are saved, cleared, and the cycle starts over.</li>
            <li>At the end of the class period touch the stop button.</li>
            <li>Touch the email icon at the bottom of the screen, and the results will be attached to an email.</li>
            <li>Send the results to yourself or someone else, and they can be downloaded onto another computer and analyzed.</li>
        </ol>
        <br/>
        <p>More information about the protocol is available at <a href="http://www.cwsei.ubc.ca/resources/COPUS.htm">http://www.cwsei.ubc.ca/resources/COPUS.htm</a>.<br/>
        <p>There is one difference in the app and the protocol. This app allows you to specify student engagements for each student status. If you do not like this simply use the top student engagement level and ignore the others.</p>
        ]]>
    </string>
    <string name="title_fileselect_list">Files</string>
    <string name="title_fileselect_detail">FileSelect Detail</string>
    <string name="fileselect_detail_delete">Delete File</string>
    <string name="fileselect_detail_mail">Send/Mail File</string>
    <string name="fileselect_detail_rename">Rename File</string>
    <string name="fileselect_cancel">Cancel</string>
    <string name="fileselect_delete">Delete</string>
    <string name="fileselect_delete_message">Do you want to delete this file?</string>
    <string name="fileselect_delete_title">Delete: </string>
    <string name="fileselect_rename">Rename</string>
    <string name="fileselect_rename_message">What should the new name for the file be?</string>
    <string name="fileselect_rename_title">Rename: </string>
    <string name="fileselect_name_changed"></string>

</resources>
