<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:layout_marginLeft="5dp"
    android:layout_marginTop="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginBottom="5dp"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".FileSelectDetailFragment">

    <TextView
        android:id="@+id/fileselect_detail"
        style="?android:attr/textAppearanceLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:textIsSelectable="true"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="-85dp" />

    <Button
        android:id="@+id/delete_file"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fileselect_detail_delete" />

    <Button
        android:id="@+id/mail_file"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fileselect_detail_mail" />

    <Button
        android:id="@+id/rename_file"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fileselect_detail_rename" />

</LinearLayout>
